<?xml version="1.0" encoding="utf-8"?>
<!--
True SDK Copyright notice and License

Copyright(c)2015-present,True Software Scandinavia AB.All rights reserved.

In accordance with the separate agreement executed between You and True Software Scandinavia AB You are granted a limited,non-exclusive,
non-sublicensable,non-transferrable,royalty-free,license to use the True SDK Product in object code form only,solely for the purpose of using the
True SDK Product with the applications and API’s provided by True Software Scandinavia AB.

HE TRUE SDK PRODUCT IS PROVIDED WITHOUT WARRANTY OF ANY KIND,EXPRESS OR IMPLIED,INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY,
FITNESS FOR A PARTICULAR PURPOSE,SOFTWARE QUALITY,PERFORMANCE,DATA ACCURACY AND NON-INFRINGEMENT.IN NO EVENT SHALL THE AUTHORS OR COPYRIGHT HOLDERS
BE LIABLE FOR ANY CLAIM,DAMAGES OR OTHER LIABILITY,WHETHER IN AN ACTION OF CONTRACT,TORT OR OTHERWISE,ARISING FROM,OUT OF OR IN CONNECTION WITH THE
TRUE SDK PRODUCT OR THE USE OR OTHER DEALINGS IN THE TRUE SDK PRODUCT.AS A RESULT,THE TRUE SDK PRODUCT IS PROVIDED"AS IS"AND BY INTEGRATING THE TRUE
SDK PRODUCT YOU ARE ASSUMING THE ENTIRE RISK AS TO ITS QUALITY AND PERFORMANCE.
-->
<resources>
    <string name="app_name">Truesample</string>
    <string name="partnerKey">yC3siae63347e58cc46eea00b152965668307</string>
    <string name="name">Name</string>
    <string name="phone">Phone</string>
    <string name="address">Address</string>
    <string name="email">Email</string>
    <string name="job">Job</string>
    <string name="custom_button">Custom Button</string>
</resources>
